[package]
name = "promkit-async"
version = "0.1.1"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "Async for promkit"
repository = "https://github.com/ynqa/promkit"
license = "MIT"
readme = "README.md"

[lib]
name = "promkit_async"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.81"
# See https://github.com/crossterm-rs/crossterm/issues/935
crossterm = { version = "0.28.1", features = ["use-dev-tty", "event-stream", "libc"] }
futures = "0.3.30"
futures-timer = "3.0.3"
promkit = "0.5.1"
tokio = { version = "1.42.0", features = ["full"] }
